clean infoLetter code follow sonar rules and also clean JSP view